--- a/package.json
+++ b/package.json
@@ -1,46 +1,62 @@
 {
-  "name": "backend-lista-de-pessoas",
-  "version": "1.0.0",
-  "description": "Teste Full Stack(Node/Angular) - Lista de Pessoas",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "src/**/*.ts": [
-      "prettier --write --ignore-unknown",
-      "eslint --fix",
-      "git add ."
-    ]
-  },
-  "author": "Robson Rabelo",
-  "license": "ISC",
-  "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@types/jasmine": "^4.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "commitizen": "^4.2.5",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.24.0",
-    "husky": "^8.0.1",
-    "jasmine-core": "^4.5.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-webpack": "^5.0.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "2.7.1",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.75.0",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  }
+   "name": "backend-lista-de-pessoas",
+   "version": "1.0.0",
+   "description": "Teste Full Stack(Node/Angular) - Lista de Pessoas",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "prepare": "husky install",
+      "start": "ts-node-dev --respawn --transpile-only --exit-child backend/src/app.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "lint-staged": {
+      "src/**/*.ts": [
+         "prettier --write --ignore-unknown",
+         "eslint --fix",
+         "git add ."
+      ]
+   },
+   "author": "Robson Rabelo",
+   "license": "ISC",
+   "devDependencies": {
+      "@commitlint/cli": "^17.1.2",
+      "@commitlint/config-conventional": "^17.1.0",
+      "@types/config": "^3.3.0",
+      "@types/express": "^4.17.14",
+      "@types/jasmine": "^4.3.0",
+      "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^5.39.0",
+      "@typescript-eslint/parser": "^5.39.0",
+      "commitizen": "^4.2.5",
+      "cz-conventional-changelog": "^3.3.0",
+      "eslint": "^8.24.0",
+      "husky": "^8.0.1",
+      "jasmine-core": "^4.5.0",
+      "karma": "^6.4.1",
+      "karma-chrome-launcher": "^3.1.1",
+      "karma-jasmine": "^5.1.0",
+      "karma-webpack": "^5.0.0",
+      "lint-staged": "^13.0.3",
+      "prettier": "2.7.1",
+      "ts-loader": "^9.4.1",
+      "ts-node": "10.7.0",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "4.5.2",
+      "webpack": "^5.75.0",
+      "webpack-dev-server": "^4.11.1"
+   },
+   "config": {
+      "commitizen": {
+         "path": "./node_modules/cz-conventional-changelog"
+      }
+   },
+   "dependencies": {
+      "config": "^3.3.8",
+      "dotenv": "^16.0.3",
+      "express": "^4.17.2",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.10",
+      "body-parser": "^1.19.1"
+   }
 }
