--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
-   "name": "backend-lista-de-pessoas",
+   "name": "@lista-de-pessoas/backend",
    "version": "1.0.0",
    "description": "Teste Full Stack(Node/Angular) - Lista de Pessoas",
-   "main": "index.js",
+   "main": "./src/app.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "prepare": "husky install",
-      "start": "ts-node-dev --respawn --transpile-only --exit-child backend/src/app.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "prepare": "cd .. && husky install ./.husky",
+      "start": "ts-node-dev --respawn --transpile-only --exit-child ./src/app.ts",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "build": "tsc -p .",
+      "migration:generate": "rm -rf build && npm build && npm run typeorm migration:generate ./src/migrations/added-people-entity -- -d ./src/utils/data-source.ts",
+      "migration:up": "rm -rf build && npm build && npm run typeorm migration:run -- -d ./src/utils/data-source.ts",
+      "migration:down": "rm -rf build && npm build && npm run typeorm migration:revert -- -d ./src/utils/data-source.ts"
    },
    "lint-staged": {
       "src/**/*.ts": [
@@ -22,25 +25,22 @@
       "@commitlint/cli": "^17.1.2",
       "@commitlint/config-conventional": "^17.1.0",
       "@types/config": "^3.3.0",
+      "@types/cors": "^2.8.12",
       "@types/express": "^4.17.14",
-      "@types/jasmine": "^4.3.0",
       "@types/node": "^16.11.10",
       "@typescript-eslint/eslint-plugin": "^5.39.0",
       "@typescript-eslint/parser": "^5.39.0",
       "commitizen": "^4.2.5",
+      "cors": "^2.8.5",
       "cz-conventional-changelog": "^3.3.0",
       "eslint": "^8.24.0",
       "husky": "^8.0.1",
-      "jasmine-core": "^4.5.0",
-      "karma": "^6.4.1",
-      "karma-chrome-launcher": "^3.1.1",
-      "karma-jasmine": "^5.1.0",
-      "karma-webpack": "^5.0.0",
       "lint-staged": "^13.0.3",
       "prettier": "2.7.1",
       "ts-loader": "^9.4.1",
       "ts-node": "10.7.0",
       "ts-node-dev": "^2.0.0",
+      "tsconfig-paths": "^4.1.0",
       "typescript": "4.5.2",
       "webpack": "^5.75.0",
       "webpack-dev-server": "^4.11.1"
@@ -51,12 +51,14 @@
       }
    },
    "dependencies": {
+      "body-parser": "^1.19.1",
+      "class-validator": "^0.13.2",
       "config": "^3.3.8",
       "dotenv": "^16.0.3",
-      "express": "^4.17.2",
+      "express": "^4.18.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.10",
-      "body-parser": "^1.19.1"
+      "zod": "^3.14.4"
    }
 }
